[gd_scene load_steps=15 format=2]

[ext_resource path="res://zombie_shooter_icon.png" type="Texture" id=1]
[ext_resource path="res://ui/fail_scene.gd" type="Script" id=2]
[ext_resource path="res://ui/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/HBoxContainer.gd" type="Script" id=4]
[ext_resource path="res://fonts/prolamina_2_update.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/Exo2-SemiBoldExpanded.otf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/Arkhip_font.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxLine" id=9]
content_margin_left = 40.0
color = Color( 0.92549, 0.27451, 0.27451, 1 )
thickness = 0

[sub_resource type="StyleBoxLine" id=14]
content_margin_left = 40.0
color = Color( 0.92549, 0.27451, 0.27451, 1 )

[sub_resource type="DynamicFont" id=115]
size = 40
outline_color = Color( 0.937255, 0.894118, 0.690196, 1 )
font_data = ExtResource( 5 )

[node name="Fail" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 2469.0 ],
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.141176, 0.160784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1103, -197 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 359.0
margin_top = 238.0
margin_right = 664.0
margin_bottom = 362.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 305.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0.627451, 0.188235, 0.188235, 1 )
custom_fonts/font = SubResource( 2 )
text = "ФЕЙЛ"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 305.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 1 )
text = "Не  судьба"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 319.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "С легкостью пойман зомбями"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 389.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "Не завидую вашему финтес тренеру"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 305.0
margin_bottom = 100.0
custom_colors/font_color = Color( 0.498039, 0.427451, 0.427451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Зомби оказались проворнее"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 305.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 20 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -154.0
margin_right = 210.0
custom_constants/margin_top = -50
custom_constants/margin_left = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = -50.0
margin_right = 210.0
margin_bottom = 154.0
custom_constants/separation = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 9 )

[node name="Button3" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_top = 52.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 9 )
text = "В МЕНЮ"

[node name="Button4" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_top = 104.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 9 )
text = "В МЕНЮ"

[node name="logo2" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -86.5
margin_top = -28.0
margin_right = 86.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label61" type="Label" parent="logo2"]
margin_top = -4.0
margin_right = 68.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0.929412, 0.109804, 0.141176, 1 )
custom_fonts/font = SubResource( 115 )
text = "МЯСО"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label100" type="Label" parent="logo2"]
margin_left = 98.0
margin_top = -4.0
margin_right = 223.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.937255, 0.894118, 0.690196, 1 )
custom_fonts/font = SubResource( 115 )
text = "РУБКА"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZombieShooterIcon-removebg-preview(1)2" type="Sprite" parent="logo2"]
visible = false
position = Vector2( 62.4766, 8.34741 )
scale = Vector2( 0.143367, 0.143367 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="logo2"]
margin_left = 66.0
margin_top = -14.0
margin_right = 99.0
margin_bottom = 29.0
texture = ExtResource( 1 )
expand = true

[node name="Control8" type="Control" parent="."]
margin_left = 63.0
margin_top = 268.0
margin_right = 172.0
margin_bottom = 301.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed" flags=6]
